syntax = "proto3";

package yandex.cloud.events.k8s;

import "google/protobuf/field_mask.proto";
import "google/rpc/status.proto";

import "yandex/cloud/events/common.proto";
import "yandex/cloud/k8s/v1/cluster.proto";
import "yandex/cloud/k8s/v1/cluster_service.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/k8s;k8s";
option java_package = "yandex.cloud.api.events.k8s";

message CreateCluster {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];

    events.EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8;

    events.Response response = 9;

    message EventDetails {
        string cluster_id = 1 [(required) = true];
    }

    message RequestParameters {
        string folder_id = 1 [(required) = true];
        string name = 2 [(pattern) = "|[a-z]([-a-z0-9]{0,61}[a-z0-9])?"];
        reserved 3; // description
        reserved 4; // labels
        string network_id = 5 [(required) = true];
        yandex.cloud.k8s.v1.MasterSpec master_spec = 6 [(required) = true];
        yandex.cloud.k8s.v1.IPAllocationPolicy ip_allocation_policy = 7;
        oneof internet_gateway {
            string gateway_ipv4_address = 8;
        }
        string service_account_id = 9 [(required) = true];
        string node_service_account_id = 10 [(required) = true];
        yandex.cloud.k8s.v1.ReleaseChannel release_channel = 11;
        yandex.cloud.k8s.v1.NetworkPolicy network_policy = 12;
        yandex.cloud.k8s.v1.KMSProvider kms_provider = 13;
        oneof network_implementation {
            yandex.cloud.k8s.v1.Cilium cilium = 14;
        }
    }
}

message UpdateCluster {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];

    events.EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8;

    events.Response response = 9;

    message EventDetails {
        string cluster_id = 1 [(required) = true];
    }

    message RequestParameters {
        string cluster_id = 1 [(required) = true];
        google.protobuf.FieldMask update_mask = 2;
        string name = 3 [(pattern) = "|[a-z]([-a-z0-9]{0,61}[a-z0-9])?"];
        reserved 4; // new description
        reserved 5; // new labels
        oneof internet_gateway {
            string gateway_ipv4_address = 6 [(length) = "<=15"];
        }
        yandex.cloud.k8s.v1.MasterUpdateSpec master_spec = 7;
        string service_account_id = 8;
        string node_service_account_id = 9;
        yandex.cloud.k8s.v1.NetworkPolicy network_policy = 10;
        yandex.cloud.k8s.v1.IPAllocationPolicy ip_allocation_policy = 11;
    }
}

message DeleteCluster {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];

    events.EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8;

    events.Response response = 9;

    message EventDetails {
        string cluster_id = 1 [(required) = true];
    }

    message RequestParameters {
        string cluster_id = 1 [(required) = true];
    }
}

message StartCluster {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];

    events.EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8;

    events.Response response = 9;

    message EventDetails {
        string cluster_id = 1 [(required) = true];
    }

    message RequestParameters {
        string cluster_id = 1 [(required) = true];
    }
}

message StopCluster {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];

    events.EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8;

    events.Response response = 9;

    message EventDetails {
        string cluster_id = 1 [(required) = true];
    }

    message RequestParameters {
        string cluster_id = 1 [(required) = true];
    }
}

message DeleteStoppedCluster {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];

    events.EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8;

    events.Response response = 9;

    message EventDetails {
        string cluster_id = 1 [(required) = true];
    }

    message RequestParameters {
        string cluster_id = 1 [(required) = true];
    }
}

message AutoUpgradeCluster {
    Authentication authentication = 1 [(required) = true];
    Authorization authorization = 2 [(required) = true];

    EventMetadata event_metadata = 3 [(required) = true];
    RequestMetadata request_metadata = 4 [(required) = true];

    events.EventStatus event_status = 5 [(required) = true];
    google.rpc.Status error = 6;

    EventDetails details = 7 [(required) = true];

    RequestParameters request_parameters = 8;

    events.Response response = 9;

    message EventDetails {
        string cluster_id = 1 [(required) = true];
    }

    message RequestParameters {
        string cluster_id = 1 [(required) = true];
    }
}
